<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#ffffff"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    android:id="@+id/card"

    android:layout_margin="10dp"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
android:id="@+id/layout"
            android:background="@drawable/layoutback"


            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textback"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="25sp"

                    android:textColor="@color/white"
                    android:text="@string/date"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:text=""/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:background="#828B91"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="#182367"

                    android:text="@string/shirts"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/shirts"
                    android:layout_gravity="center_horizontal"
                    android:textSize="24sp"
                    android:textColor="#182367"

                    android:text=""

                    /></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"

                    android:textSize="24sp"
                    android:textColor="#182367"

                    android:text="@string/pants"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pants"

                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text=""

                    /></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text="@string/t_shirts"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tshirts"

                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text=""

                    /></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"

                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text="@string/tracks"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tracks"

                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text=""

                    /></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text="@string/shorts"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/shorts"

                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text=""

                    /></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text="@string/towels"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/towels"

                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text=""

                    /></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text="@string/blankets"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/blankets"

                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text=""

                    /></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:textStyle="bold"

                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text="@string/pillow_covers"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pillowcovers"

                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text=""

                    /></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text="@string/pyjamas"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pyjamas"

                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text=""

                    /></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text="@string/boxers"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/boxers"

                    android:textSize="24sp"
                    android:textColor="#182367"
                    android:text=""

                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="#828B91"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="#ff4500"
                    android:text="@string/total"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/total"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="#ff4500"
                    android:text=""

                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"

                android:background="#828B91"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textviewimage"
                android:gravity="center_horizontal"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:textColor="#3d7607"
                android:text="@string/view_image"

                />
            <com.github.chrisbanes.photoview.PhotoView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/showImage"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
android:visibility="gone"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"

                />





        </LinearLayout>








    </ScrollView>
</androidx.cardview.widget.CardView>