<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="#ffffff"
    tools:context=".MainActivity"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="60dp"
        android:id="@+id/card"
        android:background="@android:color/transparent"
        app:cardCornerRadius="5dp"

        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:background="@drawable/layoutback"
        >
        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"

            android:text="@string/my_clothes"
            android:textSize="25sp"
            android:paddingTop="10dp"
            android:background="@drawable/textback"
            android:textStyle="bold"
            android:textAllCaps="false"

            android:textColor="@color/white"/>

        <Button
            android:id="@+id/b2"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/buttonback"
            android:text="@string/add_clothes"
android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
             />

        <Button
            android:id="@+id/b1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:background="@drawable/buttonback"
            android:text="@string/previous_clothes"
android:textSize="20sp"

            android:textColor="@color/white"
            android:layout_marginBottom="50dp"
           />
    </LinearLayout>
    </ScrollView>
    </androidx.cardview.widget.CardView>






</LinearLayout>