<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="#ffffff"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/card"
        android:background="@android:color/transparent"
        app:cardCornerRadius="5dp"

        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:background="@drawable/layoutback"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"

                    android:textSize="25sp"

                    android:background="@drawable/textback"
                    android:gravity="center_horizontal"
                    android:text="@string/reset_password"
android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:textColor="@color/white"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="15sp"

                    android:id="@+id/textautherror"


                    android:text=""
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="#C2185B"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailinrestpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:hintEnabled="true"

                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintTextColor="#182367"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/enter_your_email"
android:drawableEnd="@drawable/ic_email_black_24dp"
                        android:id="@+id/email"

                        android:layout_marginTop="20dp"


                        android:inputType="textEmailAddress"
                        />

                </com.google.android.material.textfield.TextInputLayout>





                <Button
                    android:layout_width="180dp"

                    android:background="@drawable/buttonback"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="50dp"
                    android:id="@+id/sendemail"
                    android:textColor="@color/white"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:layout_marginBottom="80dp"
                    android:text="@string/send_email"
                    />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>
</LinearLayout>