<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#ffffff"
    android:orientation="vertical">





    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/card"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="5dp"

        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:background="@drawable/layoutback"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"

                    android:textSize="25sp"

                    android:background="@drawable/textback"
                    android:gravity="center_horizontal"
                    android:text="@string/sign_in"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:textColor="@color/white"
                    />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/headericon"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/profileplaceholder"

                   />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"

                    android:id="@+id/textautherror"


                    android:text=""
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="#C2185B"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:hintEnabled="true"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintTextColor="#182367"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="Enter Your Email"
                        android:id="@+id/e"
                        android:layout_marginTop="20dp"
android:drawableEnd="@drawable/ic_email_black_24dp"
                        android:inputType="textEmailAddress"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:hintEnabled="true"
                    app:errorEnabled="true"

                    app:hintAnimationEnabled="true"
                    app:hintTextColor="#182367"
                    app:passwordToggleEnabled="true"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="Enter Your Password"
                        android:id="@+id/p"

android:drawableEnd="@drawable/lock"
                        android:layout_marginTop="20dp"


                        android:inputType="textPassword"
                        />

                </com.google.android.material.textfield.TextInputLayout>





                <Button
                    android:layout_width="180dp"
                    android:cursorVisible="false"
                    android:background="@drawable/buttonback"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="50dp"
                    android:id="@+id/login"
                    android:textColor="@color/white"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:text="Login"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="15sp"

                    android:id="@+id/signup"
                    android:gravity="center_horizontal"
                    android:text="@string/new_user_click_here"
                    android:textColor="#182367"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textSize="15sp"

                    android:id="@+id/forgotpassword"
                    android:gravity="center_horizontal"
                    android:text="@string/forgot_password_click_here"
                    android:textColor="#182367"
                    android:layout_marginBottom="40dp"
                    />
            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>





</LinearLayout>